# agent-core-orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  RULES.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: ci.yml
agents/: architect.agent.md  developer.agent.md  ops.agent.md  qa.agent.md  wikist.agent.md
docs/: SPEC.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260428_001_initial_schema.py  20260428_002_tenant_scoping.py  20260428_003_graph_pk_per_project.py  20260429_004_traces_wiki_pages.py
src/agentcore/: __init__.py  capabilities.py  cli.py  client.py  host.py  language.py  logging_setup.py  models.py  settings.py
src/agentcore/adapters/: __init__.py  base.py  claude_code.py  cloud_aws.py  cloud_azure.py  git_local.py  github_pr.py  gitnexus.py  graphify.py
src/agentcore/contracts/: __init__.py  domain.py  envelopes.py
src/agentcore/llm/: __init__.py  router.py  tokens.py
src/agentcore/memory/: __init__.py  code_index.py  embed.py  graph.py  prf.py  rerank.py  vector.py
src/agentcore/orchestrator/: __init__.py  app.py  runtime.py  traces.py
src/agentcore/retrieval/: __init__.py  factory.py  hybrid.py
src/agentcore/runtime/: __init__.py  executors.py  pytest_executor.py  sandbox.py
src/agentcore/skills/: __init__.py
src/agentcore/spec/: __init__.py  loader.py  models.py  parser.py
src/agentcore/state/: __init__.py  bootstrap.py  db.py  idempotency.py  jobs.py
src/agentcore/ui/: __init__.py  routes.py
src/agentcore/ui/static/css/: shared.css
src/agentcore/ui/static/js/: app.js
src/agentcore/ui/templates/: agents.html  base.html  chain_detail.html  chains.html  dashboard.html  graph.html  jobs.html  wiki.html  wiki_page.html
src/agentcore/wiki/: __init__.py  curator.py  index.py  naming.py  storage.py
tests/: test_cli_convergence.py  test_client.py  test_contracts.py  test_diff_hunks.py  test_enrichment.py  test_graph.py  test_host_detection.py  test_jobs_alerting.py  test_language.py  test_loader.py  test_orchestrator_app.py  test_patch_apply.py  test_prf.py  test_production_agents.py  test_router_selection.py  test_spec_parser.py  test_tenant_isolation.py  test_tenant_isolation_pg.py  test_traces_pg.py  test_ui_chain_cache.py  test_ui_graph.py  test_ui_project_persistence.py  test_wiki_curator_lint.py  test_wiki_index.py  test_wiki_storage.py
